.metadata/.plugins/org.eclipse.cdt.ui/Test004-ADC.build.log
15:03:01 **** Incremental Build of configuration Debug for project Test004-ADC ****
make -j24 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/myLib.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/myLib.d" -MT"Core/Src/myLib.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/myLib.o"
../Core/Src/myLib.c: In function '__io_putchar':
../Core/Src/myLib.c:12:36: warning: passing argument 2 of 'HAL_UART_Transmit' from incompatible pointer type [-Wincompatible-pointer-types]
   12 |         HAL_UART_Transmit(&huart2, &ch, 1, 10 );
      |                                    ^~~
      |                                    |
      |                                    int *
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:411,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/myLib.c:7:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h:745:79: note: expected 'const uint8_t *' {aka 'const unsigned char *'} but argument is of type 'int *'
  745 | HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, const uint8_t *pData, uint16_t Size, uint32_t Timeout);
      |                                                                ~~~~~~~~~~~~~~~^~~~~
../Core/Src/myLib.c: In function 'ProgramStart':
../Core/Src/myLib.c:27:9: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
   27 |         printf("\033[2J\033[0;0H");
      |         ^~~~~~
../Core/Src/myLib.c:8:1: note: include '<stdio.h>' or provide a declaration of 'printf'
    7 | #include "main.h"
  +++ |+#include <stdio.h>
    8 | extern UART_HandleTypeDef huart2;
../Core/Src/myLib.c:27:9: warning: incompatible implicit declaration of built-in function 'printf' [-Wbuiltin-declaration-mismatch]
   27 |         printf("\033[2J\033[0;0H");
      |         ^~~~~~
../Core/Src/myLib.c:27:9: note: include '<stdio.h>' or provide a declaration of 'printf'
../Core/Src/myLib.c: In function 'i2c_scan':
../Core/Src/myLib.c:36:43: error: 'hi2c1' undeclared (first use in this function)
   36 |                 if(HAL_I2C_IsDeviceReady(&hi2c1, addr, 1, 10)== HAL_OK)
      |                                           ^~~~~
../Core/Src/myLib.c:36:43: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/myLib.c:38:33: warning: incompatible implicit declaration of built-in function 'printf' [-Wbuiltin-declaration-mismatch]
   38 |                                 printf("  %02x ", addr); //?ï¿½ï¿½?ï¿½ï¿½?ï¿½ï¿½?ï¿½ï¿½ï¿??? ?ï¿½ï¿½?ï¿½ï¿½ï¿??? ?ï¿½ï¿½?ï¿½ï¿½?ï¿½ï¿½ï¿??? ?ï¿½ï¿½?ï¿½ï¿½?ï¿½ï¿½ì¹˜ï¿½?? putty?ï¿½ï¿½ disp
      |                                 ^~~~~~
../Core/Src/myLib.c:38:33: note: include '<stdio.h>' or provide a declaration of 'printf'
../Core/Src/myLib.c:42:25: warning: incompatible implicit declaration of built-in function 'printf' [-Wbuiltin-declaration-mismatch]
   42 |                         printf("  .  ");
      |                         ^~~~~~
../Core/Src/myLib.c:42:25: note: include '<stdio.h>' or provide a declaration of 'printf'
../Core/Src/myLib.c:44:41: warning: incompatible implicit declaration of built-in function 'printf' [-Wbuiltin-declaration-mismatch]
   44 |                 if((addr %16) ==0)      printf("\r\n"); //16ï¿??? ë§ˆë‹¤ ì¤„ë°”ï¿???
      |                                         ^~~~~~
../Core/Src/myLib.c:44:41: note: include '<stdio.h>' or provide a declaration of 'printf'
../Core/Src/myLib.c:46:1: warning: control reaches end of non-void function [-Wreturn-type]
   46 | }
      | ^
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:96:3: warning: implicit declaration of function 'ProgramStart' [-Wimplicit-function-declaration]
   96 |   ProgramStart("LCD (1602)");
      |   ^~~~~~~~~~~~
../Core/Src/main.c:97:3: warning: implicit declaration of function 'i2c_scan' [-Wimplicit-function-declaration]
   97 |   i2c_scan();
      |   ^~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/myLib.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j24 all" terminated with exit code 2. Build might be incomplete.

15:03:02 Build Failed. 3 errors, 9 warnings. (took 417ms)

